# soki_robo

./: .gitignore  README.md  requirements.txt  setup.sh
examples/: motor_test.ipynb  teleop.ipynb  ups_monitor.ipynb
firmware/: knowhow.md
firmware/examples/encoder_read/: empty.c
firmware/examples/imu_read/: empty.c  empty.syscfg
firmware/examples/motor_control/: empty.c  empty.syscfg
firmware/examples/motor_test/: empty.c
firmware/examples/uart_echo/: empty.c
firmware/soki_main/: empty.c  empty.syscfg
firmware/soki_main/BSP/: app_motor_usart.c  app_motor_usart.h  bsp_motor_usart.c  delay.h  imu.h  ioi2c.c  modbus.h  motor.c  usart.c  usart.h
firmware/soki_main/targetConfigs/: MSPM0G3507.ccxml
firmware/souki_main/: empty.c
firmware/souki_main/BSP/: bsp_motor_usart.h  imu.c  modbus.c  motor.h
lessons/00_overview/: overview.md
lessons/01_experience/: 01_roadmap.md  02_python_basics.md  03_wheel_control.md  04_encoder.md  05_imu.md  06_lidar.md  07_numpy.md  08_matplotlib.md
lessons/02_engineering_math/: 01_trigonometry.md  02_linear_algebra.md  03_calculus.md  04_probability.md
lessons/03_engineering_computation/: 01_differential_drive.md  02_wheel_odometry.md  03_pid_control.md  04_complementary_filter.md  05_state_equation.md  06_kalman_filter.md
python/: requirements.txt
ros2_ws/: setup.bash
ros2_ws/src/soki_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/soki_hardware/: CMakeLists.txt  package.xml  soki_hardware_plugin.xml
ros2_ws/src/soki_hardware/include/soki_hardware/: soki_system.hpp  visibility_control.h
ros2_ws/src/soki_hardware/src/: soki_system.cpp
ros2_ws/src/soki_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/soki_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
ros2_ws/src/soki_navigation/launch/: navigation.launch.py  slam.launch.py
scripts/: test_lidar.py  test_mcu.py  ups_monitor.py
services/: install-services.sh  soki-ups.service.template  soki-vnc.service.template
utils/: test_lidar.py  test_mcu.py
utils/service_manager/: install-services.sh  soki-jupyter.service.template  soki-novnc.service.template  soki-vnc-xstartup  soki-vnc.service.template
(+16 files in other folders)
